--- a/CircuitBreaker/CircuitBreaker.csproj
+++ b/CircuitBreaker/CircuitBreaker.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\ServiceStatusController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
